syntax = "proto3";

package task;

option go_package = "github.com/bonyuta0204/otel-lab/proto/taskpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (Task);
    rpc GetTask(GetTaskRequest) returns (Task);
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
    rpc UpdateTask(UpdateTaskRequest) returns (Task);
    rpc DeleteTask(DeleteTaskRequest) returns (google.protobuf.Empty);
}

enum TaskStatus {
    TODO = 0;
    IN_PROGRESS = 1;
    DONE = 2;
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    TaskStatus status = 4;
    string assignee_id = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
    string assignee_id = 3;
}

message GetTaskRequest {
    string id = 1;
}

message ListTasksRequest {
    int32 page_size = 1;
    int32 page_number = 2;
    string assignee_id = 3;
    TaskStatus status = 4;
}

message ListTasksResponse {
    repeated Task tasks = 1;
    int32 total_count = 2;
}

message UpdateTaskRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    TaskStatus status = 4;
    string assignee_id = 5;
}

message DeleteTaskRequest {
    string id = 1;
}